<resources>
    <string name="app_name">WMS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="purchase_order_fragment_title">采购订单</string>
    <string name="purchase_order_fragment_order_label">订单号：</string>
    <string name="purchase_order_fragment_order_purchase_date">采购日期：</string>
    <string name="purchase_order_fragment_order_delivery_date">入库日期：</string>
    <string name="purchase_order_fragment_order_user">经办人：</string>
    <string name="purchase_order_fragment_order_supplier">供货商：</string>
    <string name="purchase_order_fragment_order_price">总价格：</string>
    <string name="purchase_order_fragment_order_count">数量：</string>
    <string name="purchase_order_fragment_order_state">当前状态：</string>
    <string name="purchase_order_fragment_order_comment">管理员批注：</string>
    <string name="sale_order_fragment_title">销售订单</string>
    <string name="sale_order_fragment_order_label">订单号：</string>
    <string name="sale_order_fragment_order_customer">客户：</string>
    <string name="sale_order_fragment_order_sale_date">销售日期：</string>
    <string name="sale_order_fragment_order_delivery_date">出库日期：</string>
    <string name="sale_order_fragment_order_state">当前状态：</string>
    <string name="sale_order_fragment_order_comment">管理员批注：</string>
    <string name="product_fragment_title">产品信息</string>
    <string name="product_fragment_name">名称：</string>
    <string name="product_fragment_model">型号：</string>
    <string name="product_fragment_usedmaterial">使用原料：</string>
    <string name="product_fragment_price">建议零售价：</string>
    <string name="material_fragment_title">原料信息</string>
    <string name="material_fragment_name">名称：</string>
    <string name="material_fragment_model">型号：</string>
    <string name="material_fragment_price">市场参考价：</string>
    <string name="supplier_fragment_title">供货商信息</string>
    <string name="supplier_fragment_name">名称：</string>
    <string name="supplier_fragment_address">地址：</string>
    <string name="supplier_fragment_mainsupply">供货原料：</string>
    <string name="customer_fragment_title">客户信息</string>
    <string name="customer_fragment_name">名称：</string>
    <string name="customer_fragment_address">地址：</string>
    <string name="customer_fragment_mainpurchase">主要购买产品：</string>
    <string name="customer_fragment_priority">客户优先级：</string>
    <string name="inventory_fragment_title">库存信息</string>
    <string name="inventory_fragment_product_title">产品库存</string>
    <string name="inventory_fragment_material_title">原料库存</string>
    <string name="user_fragment_title">用户管理</string>
    <string name="user_fragment_id">用户ID：</string>
    <string name="user_fragment_name">用户名：</string>
    <string name="user_fragment_password">用户密码：</string>
    <string name="profile_fragment_title">个人信息</string>
    <string name="report_fragment_title">数据分析</string>
</resources>