<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="73dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="110dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline74"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="146dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="183dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline76"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="219dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline77"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="256dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="293dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="339dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="314dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline73"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="37dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05109489" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_order_fragment_order_user"
        android:textAppearance="@style/font_family_pingfang_black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline73"
        app:layout_constraintStart_toStartOf="@+id/guideline60"
        app:layout_constraintTop_toTopOf="@+id/guideline73" />

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="小谢"
        android:textAppearance="@style/font_family_pingfang_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline73"
        app:layout_constraintStart_toEndOf="@+id/textViewUserId"
        app:layout_constraintTop_toTopOf="@+id/guideline73" />

    <TextView
        android:id="@+id/textViewUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3180608067"
        android:textAppearance="@style/font_family_pingfang_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline73"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/guideline73" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_fragment_name"
        android:textAppearance="@style/font_family_pingfang_black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline47"
        app:layout_constraintStart_toStartOf="@+id/guideline60"
        app:layout_constraintTop_toTopOf="@+id/guideline47" />

    <Spinner
        android:id="@+id/spinnerName"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline47"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/guideline47"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_fragment_model"
        android:textAppearance="@style/font_family_pingfang_black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline72"
        app:layout_constraintStart_toStartOf="@+id/guideline60"
        app:layout_constraintTop_toTopOf="@+id/guideline72" />

    <Spinner
        android:id="@+id/spinnerModel"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline72"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/guideline72"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sale_order_fragment_order_customer"
        android:textAppearance="@style/font_family_pingfang_black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline74"
        app:layout_constraintStart_toStartOf="@+id/guideline60"
        app:layout_constraintTop_toTopOf="@+id/guideline74" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_order_fragment_order_count"
        android:textAppearance="@style/font_family_pingfang_black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline75"
        app:layout_constraintStart_toStartOf="@+id/guideline60"
        app:layout_constraintTop_toTopOf="@+id/guideline75" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_order_fragment_order_price"
        android:textAppearance="@style/font_family_pingfang_black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline76"
        app:layout_constraintStart_toStartOf="@+id/guideline60"
        app:layout_constraintTop_toTopOf="@+id/guideline76" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sale_order_fragment_order_sale_date"
        android:textAppearance="@style/font_family_pingfang_black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline77"
        app:layout_constraintStart_toStartOf="@+id/guideline60"
        app:layout_constraintTop_toTopOf="@+id/guideline77" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_order_fragment_order_delivery_date"
        android:textAppearance="@style/font_family_pingfang_black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline78"
        app:layout_constraintStart_toStartOf="@+id/guideline60"
        app:layout_constraintTop_toTopOf="@+id/guideline78" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_order_fragment_order_comment"
        android:textAppearance="@style/font_family_pingfang_black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline79"
        app:layout_constraintStart_toStartOf="@+id/guideline60"
        app:layout_constraintTop_toTopOf="@+id/guideline79" />

    <Spinner
        android:id="@+id/spinnerCustomer"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline74"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/guideline74"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline75"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="@+id/guideline75"
        tools:ignore="TouchTargetSizeCheck"
        tools:text="200" />

    <EditText
        android:id="@+id/editTextDeliveryDate"
        android:layout_width="125dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline78"
        app:layout_constraintStart_toEndOf="@+id/textView28"
        app:layout_constraintTop_toTopOf="@+id/guideline78"
        tools:ignore="TouchTargetSizeCheck"
        tools:text="2022-01-17" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline76"
        app:layout_constraintStart_toEndOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/guideline76"
        tools:ignore="TouchTargetSizeCheck"
        tools:text="20000.5" />

    <TextView
        android:id="@+id/textViewSaleDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2021-09-23"
        android:textAppearance="@style/font_family_pingfang_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline77"
        app:layout_constraintStart_toEndOf="@+id/textView26"
        app:layout_constraintTop_toTopOf="@+id/guideline77" />

    <com.cardy.design.widget.IconFontTextView
        android:id="@+id/calendarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="&#xe915;"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline78"
        app:layout_constraintStart_toEndOf="@+id/editTextDeliveryDate"
        app:layout_constraintTop_toTopOf="@+id/guideline78" />

    <EditText
        android:id="@+id/editTextComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toStartOf="@+id/guideline61"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/guideline80" />

</androidx.constraintlayout.widget.ConstraintLayout>