<?xml version="1.0" encoding="utf-8"?>
<com.lihang.ShadowLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="@dimen/customer_information_item_margin"
    app:hl_cornerRadius="@dimen/information_card_radius"
    app:hl_shadowColor="@color/green_light"
    app:hl_shadowLimit="5dp"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10462287" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <TextView
            android:id="@+id/productNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_fragment_name"
            app:layout_constraintBottom_toTopOf="@+id/guideline35"
            app:layout_constraintStart_toStartOf="@+id/guideline33"
            app:layout_constraintTop_toTopOf="@+id/guideline35" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="“中华”香烟"
            app:layout_constraintBottom_toTopOf="@+id/guideline35"
            app:layout_constraintStart_toEndOf="@+id/productNameLabel"
            app:layout_constraintTop_toTopOf="@+id/guideline35" />

        <TextView
            android:id="@+id/productModelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_fragment_model"
            app:layout_constraintBottom_toTopOf="@+id/guideline36"
            app:layout_constraintStart_toStartOf="@+id/guideline33"
            app:layout_constraintTop_toTopOf="@+id/guideline36" />

        <TextView
            android:id="@+id/productModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="SC20210512"
            app:layout_constraintBottom_toTopOf="@+id/guideline36"
            app:layout_constraintStart_toEndOf="@+id/productModelLabel"
            app:layout_constraintTop_toTopOf="@+id/guideline36" />

        <TextView
            android:id="@+id/productPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_fragment_price"
            app:layout_constraintBottom_toTopOf="@+id/guideline37"
            app:layout_constraintStart_toStartOf="@+id/guideline33"
            app:layout_constraintTop_toTopOf="@+id/guideline37" />

        <TextView
            android:id="@+id/productUsedMaterialLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_fragment_usedmaterial"
            app:layout_constraintBottom_toTopOf="@+id/guideline38"
            app:layout_constraintStart_toStartOf="@+id/guideline33"
            app:layout_constraintTop_toTopOf="@+id/guideline38" />

        <TextView
            android:id="@+id/productUsedMaterial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline38"
            app:layout_constraintStart_toEndOf="@+id/productUsedMaterialLabel"
            app:layout_constraintTop_toTopOf="@+id/guideline38"
            tools:text="卷纸、鸦片" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="100"
            app:layout_constraintBottom_toTopOf="@+id/guideline37"
            app:layout_constraintStart_toEndOf="@+id/productPriceLabel"
            app:layout_constraintTop_toTopOf="@+id/guideline37" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.lihang.ShadowLayout>